# verification_work

./: pyproject.toml
todolist/: settings.py
